--- a/css/style.css
+++ b/css/style.css
@@ -258,6 +258,119 @@ nav {
   }
 }
 
+/* My work section */
+
+.my-work {
+  max-width: 1000px;
+  margin: 0 auto;
+  background-color: var(--clr-dark);
+  color: var(--clr-light);
+}
+
+.section__subtitle--work {
+  color: var(--clr-accent);
+  font-weight: var(--fw-bold);
+}
+
+.portfolio__subtitle::after {
+  content: "";
+  background: linear-gradient(
+    to left,
+    transparent 40%,
+    var(--clr-light),
+    var(--clr-accent)
+  );
+  display: block;
+  width: 100%;
+  height: 1px;
+  margin-top: 0.4em;
+}
+
+.portfolio {
+  margin: 3em auto;
+}
+
+@media (min-width: 600px) {
+  .portfolio {
+    display: grid;
+    grid-template-areas:
+      "img-1 paragraph-1"
+      "paragraph-2 img-2"
+      "img-3 paragraph-3"
+      "paragraph-4 img-4"
+      "img-5 paragraph-5"
+      "paragraph-6 img-6"
+      "img-7 paragraph-7"
+      "paragraph-8 img-8";
+    grid-column-gap: 2em;
+    grid-row-gap: 2em;
+  }
+
+  .portfolio__item-1 {
+    grid-area: img-1;
+  }
+
+  .portfolio__text-1 {
+    grid-area: paragraph-1;
+  }
+
+  .portfolio__item-2 {
+    grid-area: img-2;
+  }
+
+  .portfolio__text-2 {
+    grid-area: paragraph-2;
+  }
+
+  .portfolio__item-3 {
+    grid-area: img-3;
+  }
+
+  .portfolio__text-3 {
+    grid-area: paragraph-3;
+  }
+
+  .portfolio__item-4 {
+    grid-area: img-4;
+  }
+
+  .portfolio__text-4 {
+    grid-area: paragraph-4;
+  }
+
+  .portfolio__item-5 {
+    grid-area: img-5;
+  }
+
+  .portfolio__text-5 {
+    grid-area: paragraph-5;
+  }
+
+  .portfolio__item-6 {
+    grid-area: img-6;
+  }
+
+  .portfolio__text-6 {
+    grid-area: paragraph-6;
+  }
+
+  .portfolio__item-7 {
+    grid-area: img-7;
+  }
+
+  .portfolio__text-7 {
+    grid-area: paragraph-7;
+  }
+
+  .portfolio__item-8 {
+    grid-area: img-8;
+  }
+
+  .portfolio__text-8 {
+    grid-area: paragraph-8;
+  }
+}
+
 /* Section titles with gradient animations */
 .section__title--container {
   width: fit-content;
