--- a/css/style.css
+++ b/css/style.css
@@ -293,12 +293,32 @@ nav {
   margin: 3em auto;
 }
 
+.portfolio__item {
+  border: 1px solid red;
+  margin: 0 auto 4em;
+}
+
+.portfolio__text {
+  border: 1px solid red;
+}
+
 .portfolio__img {
-  margin-bottom: 4em;
   border-radius: 5px;
+  transition: transform 250ms cubic-bezier(0.5, 0, 0.5, 1), opacity 250ms linear;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
     rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.portfolio__img:hover {
+  transform: scale(1.02);
+  opacity: 0.75;
+}
+
+@media (max-width: 599px) {
+  .portfolio__text {
+    margin-top: 4em;
+  }
 }
 
 @media (min-width: 600px) {
