--- a/css/style.css
+++ b/css/style.css
@@ -294,12 +294,16 @@ nav {
 }
 
 .portfolio__item {
-  border: 1px solid red;
   margin: 0 auto 4em;
 }
 
 .portfolio__text {
-  border: 1px solid red;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  block-size: fit-content;
+  padding: 1em;
+  border-radius: 5px;
 }
 
 .portfolio__img {
