--- a/css/style.css
+++ b/css/style.css
@@ -287,6 +287,13 @@ nav {
   width: 100%;
   height: 1px;
   margin-top: 0.5em;
+  transition: all 3s;
+  opacity: 0.25;
+}
+
+.portfolio__subtitle:hover::after {
+  opacity: 1;
+  width: 120%;
 }
 
 .portfolio {
@@ -298,12 +305,19 @@ nav {
 }
 
 .portfolio__text {
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+  /* box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
-    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; */
   block-size: fit-content;
   padding: 1em;
   border-radius: 5px;
+  transition: box-shadow 3s;
+}
+
+.portfolio__text:hover {
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .portfolio__img {
@@ -442,7 +456,6 @@ nav {
   display: block;
   width: 100%;
   height: 3px;
-  transition: all 3s;
   opacity: 1;
   margin-right: 320px;
 }
@@ -473,6 +486,5 @@ nav {
   display: block;
   width: 100%;
   height: 3px;
-  transition: all 3s;
   opacity: 1;
 }
