--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ strong {
   background: var(--clr-accent);
   color: var(--clr-dark);
   text-decoration: none;
-  font-size: 0.9rem;
+  font-size: 1rem;
   text-transform: lowercase;
   font-weight: var(--fw-bold);
   letter-spacing: 2px;
@@ -82,7 +82,7 @@ strong {
 }
 
 .btn:hover {
-  transform: scale(1.1);
+  transform: scale(1.075);
 }
 
 /* Typography */
@@ -287,7 +287,7 @@ nav {
   width: 100%;
   height: 1px;
   margin-top: 0.5em;
-  transition: all 3s;
+  transition: all 3000ms;
   opacity: 0.25;
 }
 
@@ -311,7 +311,7 @@ nav {
   block-size: fit-content;
   padding: 1em;
   border-radius: 5px;
-  transition: box-shadow 3s;
+  transition: box-shadow 3000ms;
 }
 
 .portfolio__text:hover {
@@ -439,7 +439,7 @@ nav {
   display: block;
   width: 100%;
   height: 3px;
-  transition: all 3s;
+  transition: all 2000ms;
   opacity: 0.25;
   margin-right: 250px;
   margin-bottom: 0.55em;
@@ -457,7 +457,7 @@ nav {
   width: 100%;
   height: 3px;
   opacity: 1;
-  margin-right: 320px;
+  margin-right: 300px;
 }
 
 .section__title--container::after {
@@ -471,7 +471,7 @@ nav {
   display: block;
   width: 100%;
   height: 3px;
-  transition: all 3s;
+  transition: all 2000ms;
   opacity: 0.25;
 }
 
