--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,74 @@ h3 {
   margin-bottom: 1em;
 }
 
+/* Section titles with gradient animations */
+.section__title--container {
+  width: fit-content;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.section__title--container::before {
+  content: "";
+  background: linear-gradient(
+    to right,
+    transparent 20%,
+    var(--clr-light),
+    var(--clr-accent)
+  );
+  display: block;
+  width: 100%;
+  height: 3px;
+  transition: all 2000ms;
+  opacity: 0.25;
+  margin-right: 250px;
+  margin-bottom: 0.55em;
+}
+
+.section__title--container:hover::before {
+  content: "";
+  background: linear-gradient(
+    to right,
+    transparent 20%,
+    var(--clr-light),
+    var(--clr-accent)
+  );
+  display: block;
+  width: 100%;
+  height: 3px;
+  opacity: 1;
+  margin-right: 300px;
+}
+
+.section__title--container::after {
+  content: "";
+  background: linear-gradient(
+    to left,
+    transparent 20%,
+    var(--clr-light),
+    var(--clr-accent)
+  );
+  display: block;
+  width: 100%;
+  height: 3px;
+  transition: all 2000ms;
+  opacity: 0.25;
+}
+
+.section__title--container:hover::after {
+  content: "";
+  background: linear-gradient(
+    to left,
+    transparent 20%,
+    var(--clr-light),
+    var(--clr-accent)
+  );
+  display: block;
+  width: 100%;
+  height: 3px;
+  opacity: 1;
+}
+
 /* Header */
 
 nav {
@@ -421,70 +489,15 @@ nav {
   }
 }
 
-/* Section titles with gradient animations */
-.section__title--container {
-  width: fit-content;
-  margin: 0 auto;
+/* Footer */
+
+.footer {
+  background: hsl(0, 0%, 7%);
+  color: var(--clr-accent);
   text-align: center;
+  padding: 2.5em 0;
 }
 
-.section__title--container::before {
-  content: "";
-  background: linear-gradient(
-    to right,
-    transparent 20%,
-    var(--clr-light),
-    var(--clr-accent)
-  );
-  display: block;
-  width: 100%;
-  height: 3px;
-  transition: all 2000ms;
-  opacity: 0.25;
-  margin-right: 250px;
-  margin-bottom: 0.55em;
-}
-
-.section__title--container:hover::before {
-  content: "";
-  background: linear-gradient(
-    to right,
-    transparent 20%,
-    var(--clr-light),
-    var(--clr-accent)
-  );
-  display: block;
-  width: 100%;
-  height: 3px;
-  opacity: 1;
-  margin-right: 300px;
-}
-
-.section__title--container::after {
-  content: "";
-  background: linear-gradient(
-    to left,
-    transparent 20%,
-    var(--clr-light),
-    var(--clr-accent)
-  );
-  display: block;
-  width: 100%;
-  height: 3px;
-  transition: all 2000ms;
-  opacity: 0.25;
-}
-
-.section__title--container:hover::after {
-  content: "";
-  background: linear-gradient(
-    to left,
-    transparent 20%,
-    var(--clr-light),
-    var(--clr-accent)
-  );
-  display: block;
-  width: 100%;
-  height: 3px;
-  opacity: 1;
+.footer a {
+  color: inherit;
 }
