--- a/css/style.css
+++ b/css/style.css
@@ -501,3 +501,30 @@ nav {
 .footer a {
   color: inherit;
 }
+
+.footer__link:hover,
+.social-list__link:hover {
+  opacity: 0.75;
+}
+
+/* Typing demo */
+
+.typing-demo {
+  width: 15ch;
+  animation: typing 2s steps(12), blink 0.5s step-end infinite alternate;
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 3px solid;
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+}
+
+@keyframes blink {
+  50% {
+    border-color: transparent;
+  }
+}
