updated footer styling

--- a/css/style.css
+++ b/css/style.css
@@ -580,7 +580,20 @@ nav {
   text-decoration: none;
 }
 
+.footer__link {
+  font-size: var(--fs-h3);
+  font-weight: var(--fw-bold);
+}
+
 .footer__link:hover,
 .social-list__link:hover {
   opacity: 0.75;
+}
+
+.footer__link:hover {
+  text-decoration: underline;
+}
+
+.social-list {
+  list-style: none;
 }
