--- a/css/style.css
+++ b/css/style.css
@@ -199,8 +199,80 @@ h3 {
 
 /* Header */
 
-nav {
-  display: none;
+header {
+  display: flex;
+  justify-content: space-between;
+  padding: 1em;
+}
+
+.nav {
+  position: fixed;
+  background: var(--clr-dark);
+  color: var(--clr-light);
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  transform: translateX(100%);
+  transition: transform 250ms cubic-bezier(0.5, 0, 0.5, 1);
+}
+
+.nav__list {
+  list-style: none;
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.nav__link {
+  color: inherit;
+  font-weight: var(--fw-bold);
+  font-size: var(--fs-h3);
+  text-decoration: none;
+}
+
+.nav__link:hover {
+  color: var(--clr-accent);
+}
+
+.nav-toggle {
+  padding: 0.25em;
+  background: transparent;
+  border: 0;
+}
+
+.hamburger {
+  display: block;
+  position: relative;
+}
+
+.hamburger,
+.hamburger::before,
+.hamburger::after {
+  background: var(--clr-dark);
+  width: 2em;
+  height: 3px;
+  border-radius: 1em;
+  transition: transform 250ms ease-in-out;
+}
+
+.hamburger::before,
+.hamburger::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+}
+
+.hamburger::before {
+  top: 6px;
+}
+
+.hamburger::after {
+  bottom: 6px;
 }
 
 /* Intro section */
@@ -572,7 +644,8 @@ nav {
   background: hsl(0, 0%, 7%);
   color: var(--clr-accent);
   text-align: center;
-  padding: 2.5em 0;
+  padding: 1.5em 0;
+  font-size: var(--fs-h3);
 }
 
 .footer a {
@@ -581,7 +654,6 @@ nav {
 }
 
 .footer__link {
-  font-size: var(--fs-h3);
   font-weight: var(--fw-bold);
 }
 
@@ -596,4 +668,17 @@ nav {
 
 .social-list {
   list-style: none;
+  display: flex;
+  justify-content: center;
+  margin: 2em 0 0;
+  padding: 0;
+}
+
+.social-list__item {
+  margin: 0 0.5em;
+}
+
+.social-list__link {
+  /* this padding is to make clicking on the links with a finger a little bit easier */
+  padding: 0.5em;
 }
