added js for hamburger nav menu

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,10 @@
 
 /* General styles */
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background: var(--clr-light);
   color: var(--clr-dark);
@@ -239,9 +243,34 @@ header {
 }
 
 .nav-toggle {
-  padding: 0.25em;
+  /* extra padding to make clicking with finger easy */
+  padding: 0.5em;
   background: transparent;
   border: 0;
+  cursor: pointer;
+  position: absolute;
+  right: 1em;
+  top: 1em;
+  z-index: 1000;
+}
+
+.nav-open .nav {
+  transform: translateX(30%);
+}
+
+.nav-open .nav-toggle {
+  position: fixed;
+}
+
+.nav-open .hamburger {
+  transform: rotate(0.125turn);
+}
+
+.nav-open .hamburger::before {
+  transform: rotate(-0.25turn) translateX(6px);
+}
+.nav-open .hamburger::after {
+  opacity: 0;
 }
 
 .hamburger {
@@ -252,7 +281,7 @@ header {
 .hamburger,
 .hamburger::before,
 .hamburger::after {
-  background: var(--clr-dark);
+  background: var(--clr-accent);
   width: 2em;
   height: 3px;
   border-radius: 1em;
