removed outline for hamburger nav menu

--- a/css/style.css
+++ b/css/style.css
@@ -296,6 +296,10 @@ header {
   transition: transform 250ms ease-in-out;
 }
 
+.nav-toggle:focus {
+  outline: none;
+}
+
 .hamburger::before,
 .hamburger::after {
   content: "";
