--- a/css/style.css
+++ b/css/style.css
@@ -256,7 +256,7 @@ header {
   background: transparent;
   border: 0;
   cursor: pointer;
-  position: absolute;
+  position: fixed;
   right: 1em;
   top: 1em;
   z-index: 1000;
