--- a/css/style.css
+++ b/css/style.css
@@ -212,18 +212,27 @@ header {
 .nav {
   position: fixed;
   background: var(--clr-dark);
-  opacity: 0.98;
   color: var(--clr-light);
   top: 0;
   bottom: 50%;
   left: 50%;
   right: 0;
   z-index: 100;
-  transform: translateX(100%);
+  transform: translateX(105%);
   transition: transform 250ms cubic-bezier(0.5, 0, 0.5, 1);
+  box-shadow: var(--clr-accent) -5px 5px, rgba(0, 0, 0, 0.15) -10px 10px,
+    rgba(0, 0, 0, 0.05) -15px 15px;
 }
 
 @media (min-width: 800px) {
+  .nav .nav__link {
+    bottom: 50%;
+    left: 65%;
+    font-size: var(--fs-h3);
+  }
+}
+
+@media (min-width: 600px) {
   .nav {
     bottom: 50%;
     left: 60%;
@@ -242,7 +251,7 @@ header {
 .nav__link {
   color: inherit;
   font-weight: var(--fw-bold);
-  font-size: var(--fs-h3);
+  font-size: var(--fs-body);
   text-decoration: none;
 }
 
@@ -264,6 +273,12 @@ header {
 
 .nav-open .nav {
   transform: translateX(30%);
+}
+
+@media (min-width: 1000px) {
+  .nav-open .nav {
+    transform: translateX(50%);
+  }
 }
 
 .nav-open .nav-toggle {
@@ -712,7 +727,7 @@ header {
   list-style: none;
   display: flex;
   justify-content: center;
-  margin: 2em 0 0;
+  margin: 1.5em 0 0;
   padding: 0;
 }
 
