--- a/css/style.css
+++ b/css/style.css
@@ -242,7 +242,7 @@ header {
 .nav__list {
   list-style: none;
   display: flex;
-  height: 100%;
+  height: 94%;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: left;
@@ -396,6 +396,10 @@ header {
   color: var(--clr-light);
   background-blend-mode: multiply;
   text-align: center;
+}
+
+.service__text {
+  text-align: left;
 }
 
 .section__title--services {
